# drive-mirror

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  drive-mirror
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  lib.rs  models.rs  planner.rs  scanner.rs  sync.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  input.rs  lib.rs  palette.rs  render.rs
src/: main.rs
src/tests/: repro_tests.rs
