[package]
name = "drive-mirror"
version = "0.1.0"
edition = "2024"
authors = ["Umesh Pradhan <umesh.pradhan@example.com>"]
description = "A high-performance TUI utility to compare and synchronize files between two directories."
license = "MIT"
readme = "README.md"
repository = "https://github.com/umesh-pradhan/drive-mirror"
homepage = "https://github.com/umesh-pradhan/drive-mirror"
keywords = ["tui", "sync", "backup", "compare", "file-manager"]
categories = ["command-line-utilities"]
exclude = [
    "activity.db",
    "acttivity",
    "drive-mirror",
    "hd.db",
    "hd1.db",
    "target/**",
    ".idea/**",
    ".DS_Store",
]

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
filetime = "0.2"
globset = "0.4"
fs2 = "0.4"
ratatui = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
