[workspace]
members = ["crates/core", "crates/tui", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Umesh Pradhan <pradhan.umesh22@gmail.com>"]
license = "MIT"
repository = "https://github.com/umesh-pradhan/drive-mirror"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
filetime = "0.2"
fs2 = "0.4"
globset = "0.4"
ratatui = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
walkdir = "2"
drive-mirror-core = { path = "crates/core" }
drive-mirror-tui = { path = "crates/tui" }
