[package]
name = "drive-mirror-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap = { workspace = true }
filetime.workspace = true
fs2.workspace = true
globset.workspace = true
rusqlite.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
